--- a/lab2/README
+++ b/lab2/README
@@ -4,3 +4,8 @@ Use the command "python minimax.py" for minimax.py. Similarly for h_minimax.py
 
 Author: Jinjin Shao
 Oct. 14, 2015
+
+
+!---------------------------------------------------------------------------
+
+h-minimax.py, minimax.py are under HYUIDC license (How you use, I don't care)
